<resources>
    <string name="app_name">Workout App</string>
    <string name="start_image">Start Image</string>
    <string name="start">Start</string>
    <string name="get_ready_for">Get Ready For</string>
    <string name="upcoming_exercise">Upcoming Exercise:</string>
    <string name="exercise_name">Exercise Name</string>
    <string name="end">END</string>
    <string name="congratulations">Congratulations!</string>
    <string name="you_have_done_the_workout">You have done the workout!</string>
    <string name="finish">FINISH</string>
    <string name="image">Image</string>
    <string name="are_you_sure">Are you Sure?</string>
    <string name="this_will_stop_your_workout_you_ve_come_far_are_you_sure_to_quit">This will stop your Workout. You\'ve come far, are you sure to quit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="bmi">BMI</string>
    <string name="your_bmi">Your BMI</string>
    <string name="weight_in_kg">Weight (in Kg)</string>
    <string name="height_in_cm">Height (in cm)</string>
    <string name="calculate">Calculate</string>
    <string name="calculator">Calculator</string>
    <string name="metric_units">METRIC UNITS</string>
    <string name="us_units">US UNITS</string>
    <string name="weight_in_pounds">Weight (in Pounds)</string>
    <string name="height_in_feet">Height (in Feet)</string>
    <string name="height_in_inch">Height (in Inch)</string>
    <string name="history">History</string>
    <string name="exercise_completed">EXERCISE COMPLETED</string>
    <string name="no_data_available">NO DATA AVAILABLE</string>
</resources>